@@ -42,8 +42,8 @@
 
 #define MAX_DENOMINATOR (100.00)
 
-/* this is only added to make the code compile */
-#ifdef XI_Add_DevicePresenceNotify_Major
+/* test if the required version of inputproto (1.4.2) is available */
+#if XI_Add_DevicePresenceNotify_Major >= 1 && defined (DeviceRemoved)
 #define HAS_DEVICE_HOTPLUGGING
 #else
 #undef HAS_DEVICE_HOTPLUGGING
