@@ -2,6 +2,8 @@
 =====
 - Use the folder name for selecting the icon- and style-theme in the
   appearance dialog (bug #4997).
+- Make sure inputproto 1.4.2 is available before enabling device
+  hotplugging in the code (bug #5084).
 
 4.6.0
 =====
